--- a/shard.yml
+++ b/shard.yml
@@ -20,8 +20,9 @@ dependencies:
     github: crystal-lang/crystal-db
   sam:
     github: imdrasil/sam.cr
-  tren:
-    github: sdogruyol/tren
+  spec-kemal:
+    github: kemalcr/spec-kemal
+
 
 # development_dependencies:
 #   webmock:
