--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,20 +1,93 @@
-required = ["github.com/Unknwon/bra"]
+# Gopkg.toml example
+#
+# Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
+# for detailed Gopkg.toml documentation.
+#
+# required = ["github.com/user/thing/cmd/thing"]
+# ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
+#
+# [[constraint]]
+#   name = "github.com/user/project"
+#   version = "1.0.0"
+#
+# [[constraint]]
+#   name = "github.com/user/project2"
+#   branch = "dev"
+#   source = "github.com/myfork/project2"
+#
+# [[override]]
+#   name = "github.com/x/y"
+#   version = "2.4.0"
+#
+# [prune]
+#   non-go = false
+#   go-tests = true
+#   unused-packages = true
+
 
 [[constraint]]
   name = "github.com/Jeffail/tunny"
   version = "0.1.1"
 
 [[constraint]]
+  branch = "master"
+  name = "github.com/alexflint/go-arg"
+
+[[constraint]]
+  name = "github.com/bgentry/que-go"
+  version = "1.0.1"
+
+[[constraint]]
+  name = "github.com/codegangsta/cli"
+  version = "1.20.0"
+
+[[constraint]]
+  name = "github.com/docker/distribution"
+  version = "2.6.2"
+
+[[constraint]]
   name = "github.com/elazarl/go-bindata-assetfs"
   version = "1.0.0"
 
 [[constraint]]
-  name = "github.com/go-macaron/binding"
   branch = "master"
+  name = "github.com/gammazero/workerpool"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/go-macaron/binding"
+
+[[constraint]]
+  name = "github.com/go-macaron/sockets"
+  version = "0.2.0"
+
+[[constraint]]
+  name = "github.com/jackc/pgx"
+  version = "3.2.0"
+
+[[constraint]]
+  name = "github.com/k0kubun/pp"
+  version = "2.3.0"
+
+[[constraint]]
+  name = "github.com/lib/pq"
+  version = "1.0.0"
+
+[[constraint]]
+  name = "github.com/opencontainers/go-digest"
+  version = "1.0.0-rc1"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/rgzr/sshtun"
 
 [[constraint]]
   name = "github.com/smartystreets/goconvey"
   version = "1.6.3"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/yosida95/golang-jenkins"
 
 [[constraint]]
   name = "gopkg.in/macaron.v1"
