--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-proposal-numeric-separator": "^7.0.0",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-transform-destructuring": "^7.1.3",
     "@babel/preset-stage-1": "^7.0.0",
     "at-ui": "^1.3.3",
     "at-ui-style": "^1.5.1",
@@ -32,6 +33,7 @@
     "vuetify": "^1.2.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
     "@mdi/font": "^2.8.94",
     "axios": "^0.18.0",
     "babel-core": "^6.25.0",
