--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,27 +30,28 @@
     "vue-native-websocket": "^2.0.12",
     "vue-router": "^3.0.1",
     "vue-timeago": "^5.0.0",
-    "vuetify": "^1.2.8"
+    "vuetify": "^1.3.2",
+    "vuetify-loader": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
-    "@mdi/font": "^2.8.94",
+    "@mdi/font": "^3.0.39",
     "axios": "^0.18.0",
     "babel-core": "^6.25.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-component": "^1.1.1",
-    "babel-plugin-istanbul": "^5.0.1",
+    "babel-plugin-istanbul": "^5.1.0",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "chai": "^4.2.0",
     "compression-webpack-plugin": "^2.0.0",
-    "copy-webpack-plugin": "^4.5.3",
+    "copy-webpack-plugin": "^4.5.4",
     "cross-env": "^5.0.5",
     "css-loader": "^1.0.0",
     "element-ui": "^2.4.8",
-    "eslint": "^5.6.1",
+    "eslint": "^5.7.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-import-resolver-webpack": "^0.10.1",
@@ -60,10 +61,10 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "highlight.js": "^9.12.0",
+    "highlight.js": "^9.13.1",
     "html-webpack-plugin": "^3.2.0",
     "inject-loader": "^4.0.1",
-    "karma": "^3.0.0",
+    "karma": "^3.1.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
@@ -77,22 +78,24 @@
     "lolex": "^3.0.0",
     "mini-css-extract-plugin": "^0.4.4",
     "mocha": "^5.2.0",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "phantomjs-prebuilt": "^2.1.14",
     "sass-loader": "^7.1.0",
-    "sinon": "^6.3.5",
+    "sinon": "^7.0.0",
     "sinon-chai": "^3.2.0",
     "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "url-loader": "^1.1.2",
     "vue-highlightjs": "^1.3.3",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.4.2",
     "vuex": "^3.0.1",
-    "webpack": "^4.20.2",
-    "webpack-bundle-analyzer": "^3.0.2",
+    "webpack": "^4.22.0",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9",
+    "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
